SkyXplore - Construct and deconstruct buildingModule